tests/positive/pr118e2_disjoint_mut_fields.safe
-- Test: pr118e2_disjoint_mut_fields
-- Description: Disjoint sibling record fields may both be passed as `mut`.
-- Expected: ACCEPT

package pr118e2_disjoint_mut_fields

   subtype count is integer (0 to 20)
   subtype total is integer (0 to 40)

   type cell is record
      value : count

   type pair is record
      left  : cell
      right : cell

   function bump_both (left : mut cell; right : mut cell)
      left.value = left.value + 1
      right.value = right.value + 1

   function run
      owner : pair = (left = (value = 3), right = (value = 5))
      sum : total = 0

      bump_both (owner.left, owner.right)
      sum = owner.left.value + owner.right.value
